nova lp versao com texto e videos

--- a/src/limpeza/index.html
+++ b/src/limpeza/index.html
@@ -57,236 +57,188 @@
     </header>
 
     <!-- Hero Section (Promessa) -->
+    <!-- Hero Section (Promessa & Captação) -->
     <section id="hero">
-      <div class="container">
-        <div class="hero-content">
-          <h1>Sinta a pureza de um sorriso verdadeiramente limpo.</h1>
-          <p>
-            Nossa limpeza dental premium remove manchas, previne doenças e
-            devolve o brilho natural dos seus dentes em uma sessão confortável e
-            tecnológica.
-          </p>
-          <a
-            href="https://api.whatsapp.com/send?phone=5511988711774&text=Quero agendar minha limpeza premium."
-            class="btn-cta-hero"
-          >
-            Quero meu sorriso renovado
-          </a>
+        <div class="container">
+            <div class="hero-grid">
+                <div class="hero-content">
+                    <h1>Limpeza Dental Sem Dor e Sem Barulho</h1>
+                    <p class="hero-sub">Tenha dentes mais lisos, visivelmente mais claros e livres de manchas em um único atendimento.</p>
+                    <ul class="hero-features">
+                        <li><i class="fa-solid fa-check"></i> Check-up digital completo + limpeza com tecnologia suíça Airflow no mesmo local.</li>
+                        <li><i class="fa-solid fa-check"></i> Sem raspagem agressiva. Sem motor incômodo. Sem desconforto.</li>
+                        <li><i class="fa-solid fa-check"></i> Ideal para quem tem sensibilidade, implantes ou facetas de porcelana.</li>
+                    </ul>
+                    <p class="hero-closing">Sinta o frescor imediato e saia sorrindo ainda hoje.</p>
+                </div>
+                <div class="hero-form-card">
+                    <h3>Agende sua experiência</h3>
+                    <p>Preencha para garantir sua vaga</p>
+                    <form id="leadForm">
+                        <div class="form-group">
+                            <input type="text" id="name" name="name" placeholder="Nome completo" required>
+                        </div>
+                        <div class="form-group">
+                            <input type="email" id="email" name="email" placeholder="Seu melhor e-mail" required>
+                        </div>
+                        <div class="form-group">
+                            <input type="tel" id="phone" name="phone" placeholder="WhatsApp com DDD" required>
+                        </div>
+                        <button type="submit" class="btn-submit">Quero Agendar Agora</button>
+                    </form>
+                    <div class="divider">ou</div>
+                    <a href="https://api.whatsapp.com/send?phone=5511988711774&text=Olá, gostaria de saber mais sobre a limpeza sem dor." class="btn-whatsapp-hero">
+                        <i class="fa-brands fa-whatsapp"></i> Falar no WhatsApp
+                    </a>
+                </div>
+            </div>
         </div>
-        <div class="hero-image"></div>
-      </div>
     </section>
 
     <!-- Diferenciais -->
     <section id="diferenciais">
-      <div class="container">
-        <div class="section-header">
-          <h2>Por que nossa limpeza é diferente?</h2>
-          <p>Não é apenas uma limpeza. É um protocolo de saúde e estética.</p>
+        <div class="container">
+            <div class="section-header">
+                <h2>Por que fazer seu check-up e limpeza conosco?</h2>
+                <p>Com A CLÍNICA ORAL você vai ter:</p>
+            </div>
+            <div class="grid-diferenciais">
+                <div class="card-diferencial">
+                    <i class="fa-solid fa-laptop-medical"></i>
+                    <h3>Check-up Digital Completo</h3>
+                    <p>Radiografias digitais com resultado imediato, sem precisar sair da clínica. Mais praticidade e precisão no diagnóstico.</p>
+                </div>
+                <div class="card-diferencial">
+                    <i class="fa-solid fa-camera"></i>
+                    <h3>Análise Fotográfica</h3>
+                    <p>Fotografias clínicas profissionais para avaliar cor, formato e saúde gengival. Visualize seu sorriso de forma ampliada.</p>
+                </div>
+                <div class="card-diferencial">
+                    <i class="fa-solid fa-cube"></i>
+                    <h3>Escaneamento Digital 3D</h3>
+                    <p>Nada de moldagens desconfortáveis. Imagem 3D da sua arcada para avaliação completa da mordida com máxima precisão.</p>
+                </div>
+                <div class="card-diferencial">
+                    <i class="fa-solid fa-wind"></i>
+                    <h3>Tecnologia Suíça Airflow</h3>
+                    <p>Jato suave de água morna e micropartículas que remove placa e manchas com muito mais conforto. Tecnologia de última geração.</p>
+                </div>
+                <div class="card-diferencial">
+                    <i class="fa-solid fa-feather"></i>
+                    <h3>Ideal para Sensibilidade</h3>
+                    <p>Sem raspagem agressiva. Sem o barulho temido do motorzinho. Conforto total para quem tem dentes sensíveis ou implantes.</p>
+                </div>
+                <div class="card-diferencial">
+                    <i class="fa-solid fa-gem"></i>
+                    <h3>Resultados Visíveis</h3>
+                    <p>Sensação intensa de limpeza, superfície mais lisa, redução de manchas e um sorriso visivelmente mais claro.</p>
+                </div>
+            </div>
+            <div class="section-cta">
+                <a href="https://api.whatsapp.com/send?phone=5511988711774&text=Gostaria de agendar meu check-up digital." class="btn-secondary">Quero meu check-up digital</a>
+            </div>
         </div>
-        <div class="grid-diferenciais">
-          <div class="card-diferencial">
-            <i class="fa-solid fa-tooth"></i>
-            <h3>Ultrassom Piezoelétrico</h3>
-            <p>
-              Remoção de tártaro com vibrações suaves que protegem o esmalte e
-              reduzem a sensibilidade.
-            </p>
-          </div>
-          <div class="card-diferencial">
-            <i class="fa-solid fa-wand-magic-sparkles"></i>
-            <h3>Jato de Bicarbonato</h3>
-            <p>
-              Polimento detalhado que remove manchas superficiais de café, vinho
-              e alimentos.
-            </p>
-          </div>
-          <div class="card-diferencial">
-            <i class="fa-solid fa-shield-heart"></i>
-            <h3>Prevenção Completa</h3>
-            <p>
-              Diagnóstico precoce de cáries e problemas gengivais com nossa
-              câmera intraoral.
-            </p>
-          </div>
-          <div class="card-diferencial">
-            <i class="fa-solid fa-clock"></i>
-            <h3>Conforto e Agilidade</h3>
-            <p>
-              Protocolo otimizado para ser rápido, mas extremamente minucioso.
-            </p>
-          </div>
-        </div>
-        <div class="section-cta">
-          <a
-            href="https://api.whatsapp.com/send?phone=5511988711774&text=Quero agendar minha limpeza premium."
-            class="btn-secondary"
-            >Agendar Agora</a
-          >
-        </div>
-      </div>
     </section>
 
     <!-- Depoimentos (Vídeos) -->
     <section id="depoimentos">
-      <div class="container">
-        <h2>O que nossos pacientes dizem</h2>
-        <div class="video-grid">
-          <!-- Video 1 Placeholder -->
-          <div class="video-wrapper">
-            <iframe
-              width="560"
-              height="315"
-              src=""
-              title="YouTube video player"
-              frameborder="0"
-              allow="
-                accelerometer;
-                autoplay;
-                clipboard-write;
-                encrypted-media;
-                gyroscope;
-                picture-in-picture;
-                web-share;
-              "
-              allowfullscreen
-            ></iframe>
-          </div>
-          <!-- Video 2 Placeholder -->
-          <div class="video-wrapper">
-            <iframe
-              width="560"
-              height="315"
-              src=""
-              title="YouTube video player"
-              frameborder="0"
-              allow="
-                accelerometer;
-                autoplay;
-                clipboard-write;
-                encrypted-media;
-                gyroscope;
-                picture-in-picture;
-                web-share;
-              "
-              allowfullscreen
-            ></iframe>
-          </div>
+        <div class="container">
+            <h2>Seu sorriso merece tecnologia, precisão e conforto — agende sua experiência agora.</h2>
+            <div class="video-grid">
+                <!-- Video 1: Renata -->
+                <div class="video-wrapper">
+                    <iframe width="315" height="560" src="https://www.youtube.com/embed/fhFRmYO3f-w" title="Depoimento Renata" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+                <!-- Video 2: Thais -->
+                <div class="video-wrapper">
+                    <iframe width="315" height="560" src="https://www.youtube.com/embed/WJCnz4VlsNI" title="Depoimento Thais" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+            </div>
+            <div class="section-cta">
+                <a href="https://api.whatsapp.com/send?phone=5511988711774&text=Quero agendar minha limpeza." class="btn-secondary">Agendar Agora</a>
+            </div>
         </div>
-        <p class="note">Veja os depoimentos de quem fez a limpeza completa!</p>
-        <div class="section-cta">
-          <a
-            href="https://api.whatsapp.com/send?phone=5511988711774&text=Quero agendar minha limpeza premium."
-            class="btn-secondary"
-            >Agendar agora</a
-          >
-        </div>
-      </div>
     </section>
 
     <!-- Sobre a Clínica -->
     <section id="sobre">
-      <div class="container">
-        <div class="sobre-content">
-          <div class="sobre-text">
-            <h2>A Clínica Oral</h2>
-            <p>
-              Localizada no coração da Vila Olímpia, nossa clínica foi projetada
-              para oferecer uma experiência odontológica superior.
-            </p>
-            <p>
-              Ambiente climatizado, tecnologia de ponta e uma equipe de
-              especialistas prontos para cuidar do seu sorriso com a excelência
-              que você merece.
-            </p>
-            <div class="stats">
-              <div class="stat">
-                <span class="number">+15</span>
-                <span class="label">Anos de Experiência</span>
-              </div>
-              <div class="stat">
-                <span class="number">+5k</span>
-                <span class="label">Sorrisos Transformados</span>
-              </div>
+        <div class="container">
+            <div class="sobre-content">
+                <div class="sobre-text">
+                    <h2>A Clínica Oral</h2>
+                    <h3>Mais do que tratar dentes, cuidamos de pessoas.</h3>
+                    <p>
+                        A Clínica Oral nasceu com o propósito de unir excelência técnica, tecnologia de ponta e um atendimento verdadeiramente humanizado. Acreditamos que um sorriso bonito precisa estar alinhado à saúde, à função e à autoestima — tudo planejado com precisão e cuidado aos detalhes.
+                    </p>
+                    <p>
+                        Cada tratamento é individualizado, baseado em diagnóstico digital, planejamento minucioso e uma equipe comprometida com alto padrão. Aqui, o paciente não é apenas atendido — ele é acolhido, orientado e acompanhado em cada etapa.
+                    </p>
+                    <p>
+                        Se você busca segurança, naturalidade e uma experiência diferenciada em odontologia, será um prazer receber você.
+                    </p>
+                    <div class="taglines">
+                        <p><i class="fa-solid fa-star"></i> Limpeza sem dor existe — e quem tem sensibilidade entende a diferença.</p>
+                        <p><i class="fa-solid fa-heart"></i> Humanização: Mais que odontologia. Experiência e acolhimento.</p>
+                        <p><i class="fa-solid fa-microchip"></i> Tecnologia: Inovação que você vê. Confiança que você sente.</p>
+                    </div>
+                </div>
+                <div class="sobre-gallery">
+                    <div class="main-photo">
+                        <img id="main-gallery-image" src="../resources/img/Foto aline + Julia.jpeg" alt="Dra. Aline e Dra. Julia na Clínica Oral">
+                    </div>
+                    <div class="sub-photos">
+                        <img src="../resources/img/Foto aline + Julia.jpeg" alt="Dra. Aline e Dra. Julia" class="gallery-thumb active">
+                        <img src="../resources/img/Foto 3 - procedimento.png" alt="Procedimento de Limpeza" class="gallery-thumb">
+                        <img src="../resources/img/Foto 2 - a clinica.jpg" alt="A Clínica Oral" class="gallery-thumb">
+                        <img src="../resources/img/Foto 1 - airflow.jpeg" alt="Tecnologia Airflow" class="gallery-thumb">
+                    </div>
+                </div>
             </div>
-            <div class="section-cta align-left">
-              <a
-                href="https://api.whatsapp.com/send?phone=5511988711774&text=Quero agendar minha limpeza premium."
-                class="btn-secondary"
-                >Agendar agora</a
-              >
+             <div class="section-cta align-left">
+                <a href="https://api.whatsapp.com/send?phone=5511988711774&text=Gostaria de conhecer a clínica." class="btn-secondary">Conheça a clínica</a>
             </div>
-          </div>
-          <div class="sobre-image">
-            <img
-              src="../resources/img/recepcao_nova.webp"
-              alt="Recepção da Clínica Oral"
-            />
-          </div>
         </div>
-      </div>
     </section>
 
     <!-- Localização -->
     <section id="localizacao">
-      <div class="container">
-        <div class="loc-header">
-          <h2>Onde Estamos</h2>
-          <p>Venha nos visitar na Vila Olímpia</p>
+        <div class="container">
+            <div class="loc-header">
+                <h2>Fácil Localização</h2>
+                <p>Estamos localizados na Rua Funchal, 551 conj 81 – Vila Olímpia</p>
+            </div>
+            <div class="map-container">
+                <div class="address-card">
+                    <h3>Endereço</h3>
+                    <p>
+                        <i class="fa-solid fa-location-dot"></i> R. Funchal, 551 - 8º
+                        Andar - CJ 81
+                    </p>
+                    <p>Vila Olímpia, São Paulo - SP</p>
+                    <p>CEP: 04551-060</p>
+                    <a href="https://goo.gl/maps/PmnZHzsFP33oQsJL6" target="_blank" class="btn-map">Ver no Mapa</a>
+                </div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7312.480678439538!2d-46.68981!3d-23.595712!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5738057de8a3%3A0x241bc6529d38625f!2sR.%20Funchal%2C%20551%20-%20Vila%20Ol%C3%ADmpia%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2004551-060%2C%20Brasil!5e0!3m2!1spt-BR!2sus!4v1678976008098!5m2!1spt-BR!2sus" width="100%" height="450" style="border: 0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
         </div>
-        <div class="map-container">
-          <div class="address-card">
-            <h3>Endereço</h3>
-            <p>
-              <i class="fa-solid fa-location-dot"></i> R. Funchal, 551 - 8º
-              Andar - CJ 81
-            </p>
-            <p>Vila Olímpia, São Paulo - SP</p>
-            <p>CEP: 04551-060</p>
-            <a
-              href="https://goo.gl/maps/PmnZHzsFP33oQsJL6"
-              target="_blank"
-              class="btn-map"
-              >Ver no Mapa</a
-            >
-          </div>
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7312.480678439538!2d-46.68981!3d-23.595712!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5738057de8a3%3A0x241bc6529d38625f!2sR.%20Funchal%2C%20551%20-%20Vila%20Ol%C3%ADmpia%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2004551-060%2C%20Brasil!5e0!3m2!1spt-BR!2sus!4v1678976008098!5m2!1spt-BR!2sus"
-            width="100%"
-            height="450"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
-        </div>
-      </div>
     </section>
 
     <!-- Footer -->
     <footer>
-      <div class="container">
-        <div class="footer-content">
-          <img
-            src="../resources/img/logo_nova_branca.webp"
-            alt="Logo Footer"
-            class="footer-logo"
-          />
-          <div class="footer-info">
-            <p>A Clínica Oral - Dentista Vila Olímpia</p>
-            <p>Responsável técnica Dra. Aline Dias - CRO-SP 83.958</p>
-            <p>Centro Odontológico Funchal - CNPJ 09.261.984/0001-39</p>
-          </div>
-          <div class="social-links">
-            <a href="https://www.instagram.com/aclinicaoral/"
-              ><i class="fa-brands fa-instagram"></i
-            ></a>
-            <a href="https://www.facebook.com/aclinicaoral11"
-              ><i class="fa-brands fa-facebook-f"></i
-            ></a>
-          </div>
+        <div class="container">
+            <div class="footer-content">
+                <img src="../resources/img/logo_nova_branca.webp" alt="Logo Footer" class="footer-logo" />
+                <div class="footer-info">
+                    <p>A Clínica Oral - Dentista Vila Olímpia</p>
+                    <p>Responsável técnica Dra. Aline Dias - CRO-SP 83.958</p>
+                    <p>Centro Odontológico Funchal - CNPJ 09.261.984/0001-39</p>
+                </div>
+                <div class="social-links">
+                    <a href="https://www.instagram.com/aclinicaoral/"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.facebook.com/aclinicaoral11"><i class="fa-brands fa-facebook-f"></i></a>
+                </div>
+            </div>
         </div>
-      </div>
     </footer>
 
     <!-- WhatsApp Floating Button -->
