--- a/src/lentes/index.html
+++ b/src/lentes/index.html
@@ -36,6 +36,7 @@
       sizes="32x32"
       href="../resources/img/favicon-32x32.png"
     />
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </head>
   <body>
     <!-- Header -->
